# softsys-open

./: .clang-tidy  .gitignore  README.md
.github/workflows/: build_test.yaml
assignments/00-intro-to-assignments/: CMakeLists.txt  README.md
assignments/00-intro-to-assignments/src/: absolute.c  absolute.h  greet.c  greet.h  hello.c  paths.c  paths.h  run_greet.c  run_paths.c  string_utils.c  string_utils.h
assignments/00-intro-to-assignments/test/: test_absolute.c  test_greet.c  test_paths.c  test_string_utils.c
assignments/01-compilation-memory/: CMakeLists.txt  README.md  compilation.md  rubric.md
assignments/01-compilation-memory/src/: CMakeLists.txt  array_sort.c  array_sort.h  shout.c  shout.h  surprisal.c
assignments/01-compilation-memory/test/: CMakeLists.txt  test_array_sort.c  test_shout.c
assignments/02-strings-buffers/: README.md  rubric.md
assignments/02-strings-buffers/src/: CMakeLists.txt  string_utils.c  string_utils.h
assignments/02-strings-buffers/test/: CMakeLists.txt  test_count.c  test_endswith.c  test_split.c  test_startswith.c  test_strip.c
assignments/03-refactoring-build-structure/: CMakeLists.txt  README.md  rubric.md
assignments/03-refactoring-build-structure/src/: CMakeLists.txt  constants.h  is_game_over.c  is_game_over.h  move.c  move.h  run_tic_tac_toe.c  setup.c  setup.h  tic_tac_toe.c  tic_tac_toe.h
assignments/03-refactoring-build-structure/test/: CMakeLists.txt  test_is_game_over.c  test_move.c  test_setup.c  test_tic_tac_toe.c
assignments/04-testing/: .clang-tidy  CMakeLists.txt  README.md  rubric.md
assignments/04-testing/src/: CMakeLists.txt  mean.h  mean_correct.c  mean_incorrect.c  print_info.c  print_int.h  print_int_correct.c  print_int_incorrect.c  read_int.h  read_int_correct.c  read_int_incorrect.c
assignments/04-testing/test/: CMakeLists.txt  test_mean.c  test_print_int.c  test_read_int.c
assignments/05-malloc-functions/: CMakeLists.txt  README.md  rubric.md
assignments/05-malloc-functions/src/: CMakeLists.txt  linked_list.c  linked_list.h
assignments/05-malloc-functions/test/: CMakeLists.txt  test_linked_list.c
assignments/06-latency-caching/: .clang-tidy  CMakeLists.txt  README.md  rubric.md
assignments/06-latency-caching/src/: CMakeLists.txt  cache.c  cache.h  run_cache.c  run_transpose.c  transpose.c  transpose.h
assignments/06-latency-caching/test/: CMakeLists.txt  test_cache.c  test_transpose.c
assignments/07-syscalls-ipc/: CMakeLists.txt  README.md  rubric.md
assignments/07-syscalls-ipc/src/: CMakeLists.txt  shell.c  shell.h  softshell.c
assignments/07-syscalls-ipc/test/: CMakeLists.txt  test_shell.c  test_string_array.c
assignments/08-networking/: README.md  rubric.md
assignments/08-networking/src/: client.c  server.c  util.c
assignments/09-concurrency/: README.md  rubric.md
assignments/09-concurrency/src/: CMakeLists.txt  run_weave.c  weave.c
assignments/09-concurrency/test/: CMakeLists.txt  test_weave.c
class-sessions/09-build-structs/cmake-exercise/src/: greet.c  main.c
class-sessions/09-build-structs/header-exercise/: CMakeLists.txt
class-sessions/09-build-structs/header-exercise/src/: CMakeLists.txt  div.c  div.h  main.c
class-sessions/09-build-structs/include-guard-exercise/: CMakeLists.txt
class-sessions/09-build-structs/include-guard-exercise/src/: CMakeLists.txt  main.c  powmod.c  powmod.h  square.c  square.h
class-sessions/13-malloc/shapes/: CMakeLists.txt
class-sessions/13-malloc/shapes/src/: CMakeLists.txt  main.c  rectangle.c  rectangle.h
class-sessions/16-latency-caching/caching-test/: CMakeLists.txt
class-sessions/16-latency-caching/caching-test/src/: CMakeLists.txt  cache_check.c  square_sum.c
class-sessions/17-processes-syscalls/exercises/: CMakeLists.txt
class-sessions/17-processes-syscalls/exercises/src/: CMakeLists.txt  fork.c  spoon.c  switchboard.c
class-sessions/19-sockets/exercises/: CMakeLists.txt
class-sessions/19-sockets/exercises/src/: CMakeLists.txt  client.c  constants.c  constants.h
class-sessions/23-posix-threads/exercises/: CMakeLists.txt
class-sessions/23-posix-threads/exercises/src/: CMakeLists.txt  counters.c  dQw4w9WgXcQ.c  progress.c
